--- a/style/index.css
+++ b/style/index.css
@@ -62,6 +62,7 @@ nav a{
     display: flex;
     /*align-items: center;*/
     height: 400px;
+    background-color: gray;
 }
 
 .top{
@@ -98,8 +99,12 @@ h2{
 
 #button{
     margin: 0 auto;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
 
  div nav {
     text-align: center;
@@ -112,10 +117,37 @@ p {
 }
 
 .topDiv{
-    text-align: center;
     
-    width: 40%
+    align-content: center;
+    width: 40%;
+    background-color: lightgrey;
 }
+
+/*lower center*/
+.imagesFlex{
+    height:200px;
+    width: 240px;
+    align-content: center;
+}
+
+.imagesFlex{
+    display:flex;
+    justify-content: space-evenly;
+    width: 90%;
+    
+}
+
+.imgBox{
+    display: flex;
+
+    
+    
+}
+
+
+
+
+
 
 
 
